# HonestML

./: .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  context7.json  mkdocs.yml  pyproject.toml
.github/workflows/: audit.yml  benchmark.yml  ci.yml  docs-deploy.yml  release.yml
audits/: pip-audit-ignore.txt
benchmarks/: README.md  baseline.json  corpus.py  native_cat_gate.py  run.py
docs/: api.md  backlog.md  correctness-guide.md  index.md  plugin-contract.md  quickstart.md  releasing.md  versioning-policy.md
docs/adr/: ADR-0001-package-layout-and-extras.md  ADR-0002-config-and-no-global-state.md  ADR-0003-logging-and-observability.md  ADR-0004-tooling-typing-ci-versioning.md  ADR-0005-dataframe-boundary-and-dataset.md  ADR-0006-core-ports-and-task.md  ADR-0007-absolute-model-selection-score.md  ADR-0008-exception-taxonomy.md  ADR-0009-composition-root-and-di.md  ADR-0010-slice-usecase-and-oof-leaderboard.md  ADR-0011-sklearn-compatible-facade.md  ADR-0012-minimal-model-artifact.md  ADR-0013-slice-estimator-and-metric-adapters.md  ADR-0014-input-loading-boundary.md  ADR-0015-auto-typing-thresholds-and-observability.md  ADR-0016-honest-cv-selection.md  ADR-0017-source-dtype-coercion.md  ADR-0018-datetime-report-deltas.md  ADR-0019-component-registry-and-capabilities.md  ADR-0020-estimator-zoo-generalization.md  ADR-0021-multiclass-projection-and-metric-averaging.md  ADR-0022-candidate-failure-isolation.md  ADR-0023-cv-splitter-set-kfold-group.md  ADR-0024-inference-path-multiclass-regression.md  ADR-0025-group-column-public-api.md  ADR-0026-significance-band-selection.md  ADR-0027-timeseries-cv-purge-embargo.md  ADR-0028-time-column-public-api.md  ADR-0029-honest-regime-holdout-leaderboard.md  ADR-0030-probability-calibration-brier-ece.md  ADR-0031-refinement-based-selection.md  ADR-0032-budget-enforcement-graceful-degradation.md  ADR-0033-run-manifest-tracker-independent-report.md  ADR-0034-public-significance-toggle.md  ADR-0035-run-fingerprint-contract.md  ADR-0036-per-candidate-stage-cache-store.md  ADR-0037-resume-semantics-public-api.md  ADR-0038-public-run-modes.md  ADR-0039-memory-enforce.md  ADR-0040-fe-pipeline-architecture.md  (+60 more)
docs/guide/: artifacts-serving.md  cv-selection.md  data-input.md  feature-engineering-selection.md  hpo-ensembling.md  presets-budget.md  reports-tracking.md
notebooks/: .gitignore  01-titanic.ipynb  02-house-prices.ipynb  03-adult-income.ipynb  04-credit-card-fraud.ipynb  05-otto-product-classification.ipynb  06-store-sales.ipynb  07-ieee-fraud.ipynb  08-home-credit.ipynb  README.md  requirements.txt
scripts/: build_llms_txt.py  check_tag_version.py
src/honestml/: __init__.py
src/honestml/adapters/: __init__.py  boosting.py  calibration.py  candidate_cache.py  dtype_tokens.py  ensembling.py  estimators.py  feature_rankers.py  feature_selectors.py  loader.py  metrics.py  onnx_export.py  polars_dataset.py  reader.py  run_budget.py  serializers.py  significance.py  splitters.py  tracking.py  tuning.py
src/honestml/application/: __init__.py  calibration.py  ensemble.py  feature_compare.py  feature_encoding.py  feature_selection.py  oof_scorer.py  projection.py  run_report.py  slice.py  tuning.py
src/honestml/composition/: __init__.py  artifact.py  build.py  facade.py  onnx_bundle.py  presets.py  registry.py  run_report.py
src/honestml/core/: __init__.py  config.py  context.py  dataset.py  exceptions.py  logging.py  schema.py  selection_policy.py  task.py
src/honestml/core/ports/: __init__.py  budget.py  cache.py  calibration.py  ensembler.py  estimator.py  feature_ranker.py  feature_subset_selector.py  metric.py  model_serializer.py  model_spec.py  significance.py  splitter.py  tracker.py  tuner.py
tests/: conftest.py
tests/fixtures/native_artifacts/: README.md  generate.py
tests/fixtures/native_artifacts/catboost/: expected.json
tests/fixtures/native_artifacts/catboost/artifact/: manifest.json  model.cbm
tests/fixtures/native_artifacts/lightgbm_clf/: expected.json
tests/fixtures/native_artifacts/lightgbm_clf/artifact/: manifest.json  model.txt
tests/fixtures/native_artifacts/lightgbm_reg/: expected.json
tests/fixtures/native_artifacts/lightgbm_reg/artifact/: manifest.json  model.txt  schema.json
tests/fixtures/native_artifacts/xgboost/: expected.json
tests/fixtures/native_artifacts/xgboost/artifact/: manifest.json  model.ubj
tests/integration/: test_native_categorical.py  test_slice_end_to_end.py
tests/property/: test_category_codes_invariant.py  test_polars_encoding_equivalence.py  test_select_best_invariant.py  test_splitters.py
tests/unit/: test_artifact.py  test_artifact_integrity.py  test_benchmarks.py  test_boosting.py  test_build_components.py  test_calibration_facade.py  test_calibration_metrics.py  test_calibrators.py  test_candidate_cache.py  test_core_config.py  test_core_context.py  test_core_exceptions.py  test_core_logging.py  test_crossfit_calibrate.py  test_crossfit_encode.py  test_dataset_signature.py  test_docs_examples.py  test_dtype_tokens.py  test_ensemble_selection.py  test_ensembler_port.py  test_ensembling.py  test_estimators.py  test_facade.py  test_facade_ensemble.py  test_facade_finalize.py  test_facade_hpo.py  test_failure_isolation.py  test_feature_compare.py  test_feature_ranker_port.py  test_feature_rankers.py  test_feature_selection.py  test_feature_selectors.py  test_feature_subset_selector_port.py  test_inference_boundary.py  test_loader.py  test_metrics.py  test_model_spec.py  test_native_serialization.py  test_onnx_export.py  test_optuna_tuner.py  (+25 more)
