[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honestml"
version = "1.0.0"
description = "General tabular AutoML library (classification + regression), production-grade."
readme = "README.md"
requires-python = ">=3.10"
# PEP 639 (ADR-0077 §1): SPDX expression + the license file shipped in the dist
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "honestml contributors" }]
keywords = ["honestml", "automl", "machine-learning", "tabular", "boosting", "feature-selection"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Lightweight core: only what is needed to import `honestml` and the domain ports.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=1.0",
    "scikit-learn>=1.3",
    "pydantic>=2",
]

[project.optional-dependencies]
catboost = ["catboost>=1.2"]
lightgbm = ["lightgbm>=4.0"]
xgboost = ["xgboost>=2.0"]
boosting = ["catboost>=1.2", "lightgbm>=4.0", "xgboost>=2.0"]
# Slim serving runtime: load a ModelArtifact and predict without the training stack (ADR-0066 §3).
# pandas is REQUIRED — the Reader inference path imports it. Slim-ness vs [all] comes from NOT installing
# the training-only extras (optuna/shap/mlflow/onnx) plus the lazy import cone never executing them; the
# set mirrors core + an explicit joblib (a boosting artifact additionally needs its own extra).
inference = ["numpy>=1.24", "pandas>=2.0", "polars>=1.0", "scikit-learn>=1.3", "pydantic>=2", "joblib>=1.3"]
shap = ["shap>=0.44"]
optuna = ["optuna>=3.4"]
mlflow = ["mlflow>=2.9"]
# floors validated against the locked boosting zoo (onnx 1.21 / onnxruntime 1.23 /
# skl2onnx 1.20 / onnxmltools 1.16); onnxruntime powers the export-time
# parity gate (ADR-0071 §3/§6) and the external consumer.
onnx = ["onnx>=1.21", "onnxruntime>=1.23", "onnxmltools>=1.16", "skl2onnx>=1.20"]
report = ["matplotlib>=3.7"]
# psutil powers the cross-platform RSS probe for memory_limit_mb (ADR-0039); imported lazily in
# RunBudget only when a memory limit is set, never at top-level import.
memory = ["psutil>=5.9"]
# pyarrow accelerates native pandas materialization in string-heavy adapters
# (ADR-0005); the numpy+codes path does not require it.
pyarrow = ["pyarrow>=14.0"]
all = [
    "catboost>=1.2", "lightgbm>=4.0", "xgboost>=2.0", "shap>=0.44",
    "optuna>=3.4", "mlflow>=2.9", "onnx>=1.21", "onnxruntime>=1.23",
    "onnxmltools>=1.16", "skl2onnx>=1.20", "matplotlib>=3.7", "pyarrow>=14.0", "psutil>=5.9",
]
dev = [
    "ruff==0.15.16",
    "mypy>=1.8",
    "import-linter>=2.0",
    "pytest>=7.4",
    "hypothesis>=6.90",
    "pre-commit>=3.5",
    "mkdocs-material>=9.5",
    # API reference is generated from docstrings (ADR-0077 §4) — prose would drift
    "mkdocstrings[python]>=0.27",
    # the release-engineering yaml-parse tests — explicit, not transitive
    "pyyaml>=6",
    # optuna powers the HPO adapter (ADR-0061); in dev so the suite exercises the HPO path
    "optuna>=3.4",
]

[project.urls]
Homepage = "https://github.com/sukhov-is/HonestML"
Documentation = "https://sukhov-is.github.io/HonestML/"
Repository = "https://github.com/sukhov-is/HonestML"

[tool.hatch.build.targets.wheel]
packages = ["src/honestml"]

# Ship only the package + release metadata in the sdist; keep tests/docs/notebooks/benchmarks out
# of the published tarball (the wheel already ships only `src/honestml`).
[tool.hatch.build.targets.sdist]
# leading-slash anchors to the repo root (gitignore semantics) so a bare README.md/CHANGELOG.md
# inside docs/tests/notebooks is not pulled in recursively.
include = ["src/honestml", "/README.md", "/CHANGELOG.md", "/LICENSE", "/pyproject.toml"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "T20"]
# T20 (flake8-print): no `print` in library code (ADR-0003).
# E501 is left to the formatter (do not fail on legacy long lines during migration).
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"docs/**" = ["T20", "E", "F"]
# showcase notebooks print their results by design (like tests); F/E/I rules still apply.
"notebooks/**" = ["T20"]

# ---------------------------------------------------------------------------
# Mypy — strict on the domain core, lenient elsewhere (ADR-0004)
# ---------------------------------------------------------------------------
[tool.mypy]
# 3.12: numpy>=2.5 ships stubs using PEP 695 `type` statements that mypy parses only under a
# 3.12 target; runtime 3.10 support is enforced by the test matrix + ruff (UP, target py310).
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "honestml.core.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
strict_equality = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast pure-core tests (default)",
    "property: hypothesis property tests (leakage/monotonicity invariants)",
    "golden: determinism of metrics on synthetic data with fixed seed",
    "slow: full pipeline run on synthetic data",
]
